fix: card background overflow

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ main {
   display: flex;
   flex-direction: column-reverse;
   color: #fff;
-  border-radius: 1rem;
+  border-radius: 1.2rem;
 }
 
 .lower {
